--- a/Task 4 - Neighbouring Countriesurs/index.html
+++ b/Task 4 - Neighbouring Countriesurs/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Country Neighbours</title>
+    <title>Neighbouring Countries</title>
   </head>
   <body>
     <script src="./task4.js"></script>
